tests/pass/NotEqual.java
package pass;

import java.lang.System;

public class NotEqual {
	public boolean notEqual(int x, int y) {
		return x != y;
	}
}
